--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   1panel-dood:
-    image: 1panel-dood:latest
+    image: tangger/1panel-dood:latest
     command: 1panel
     network_mode: "host"
     volumes:
